--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "deploy": "./deploy.sh"
   },
   "dependencies": {
     "html2pdf.js": "0.10.1",
